# Python-Quran-App

./: LICENSE  README.md  islamic_resources.py  main.py  pyproject.toml  requirements.txt
