[project]
name = "islamic-resources-hub"
version = "0.1.0"
description = "A comprehensive Islamic resources application with Quran, prayer times, duas, and more"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
    {name = "Riaz Hussain Saifi", email = "infosaifideveloper@gmail.com"}
]

dependencies = [
    "streamlit>=1.20.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "pytz>=2022.1",
    "matplotlib>=3.5.0",
    "plotly>=5.10.0",
    "pillow>=9.0.0",
]

[project.urls]
"Homepage" = "https://github.com/Riaz-Hussain-Saifi/Python-Quran-App"
"Bug Tracker" = "https://github.com/Riaz-Hussain-Saifi/Python-Quran-App/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"